h1. CHANGELOG

h3. 3.1.3 November 23, 2015

* improve format of file 'config/railscomposer.yml' containing configuration settings

h3. 3.1.2 November 23, 2015

* include gem 'administrate' from the good folks at thoughtbot

h3. 3.1.1 November 6, 2015

* include gem 'high_voltage' so Bootstrap templates will work with all example apps
* move auth links to a new partial to accommodate Bootstrap templates
* update pitch for support

h3. 3.1.0 October 31, 2015

* added a 'stage four' sequence to accommodate Bootstrap page layouts
* added Bootstrap page layouts using the rails_apps_pages gem
* removed a redundant 'bundle install' step
* fix issue #349 typo in conditional
* version number not needed for Figaro gem

h3. 3.0.44 October 26, 2015

* merged pull requests from jsyeo, neydroid, mli, vfonic

h3. 3.0.43 October 19, 2015

* downgrade mysql2 gem due to Rails issue https://github.com/rails/rails/issues/21544

h3. 3.0.42 June 7, 2015

* update 'learn-rails' recipe for application version 2.2.0
* correct Foreman .env OmniAuth configuration in 'init' recipe (closes #335)

h3. 3.0.41 May 31, 2015

* remove 'ENV.fetch' and restore 'ENV' to avoid errors during 'rake db:migrate'

h3. 3.0.40 May 10, 2015

* add a temporary file 'config/railscomposer.yml' with configuration settings

h3. 3.0.39 April 28, 2015

* use 'ENV.fetch' instead of 'ENV' to reveal configuration issues
* fix a documentation URL
* fix missing backslashes in a regex expression

h3. 3.0.38 April 27, 2015

* accommodate Haml and Slim when disabling Turbolinks

h3. 3.0.37 April 24, 2015

* option to remove Rails Turbolinks
* disable Turbolinks for 'rails-stripe-membership-saas' example application

h3. 3.0.36 April 23, 2015

* install bundler gem (because it is no longer automatically installed by RVM)

h3. 3.0.35 April 16, 2015

* fix error with Haml::HTML (contributed by Matthew Orahood)

h3. 3.0.34 April 15, 2015

* add 'rails-stripe-membership-saas' example application

h3. 3.0.33 February 4, 2015
