@@ -1,3 +1,3 @@
 module RailsWizard
-  VERSION = "3.1.3"
+  VERSION = "3.1.4"
 end
